--- a/_posts/0000-01-02-d2s.md
+++ b/_posts/0000-01-02-d2s.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+History of a software project is distributed with every new Git commit.
 Use the left arrow to go back!
